add books manually is boring

--- a/list.html
+++ b/list.html
@@ -51,13 +51,44 @@
                     <td>Essais sur le féminisme</td>
                     <td>10</td>
                 </tr>
-                <tr>
 
-                    <td>La nuit des enfants rois</td>
-                    <td>Bernard Lenteric</td>
-                    <td>roman d'ancitipation</td>
-                    <td>10</td>
+                <tr>
+                    <td>Des lumières et des ombres</td>
+                    <td>Henri Alekan</td>
+                    <td>livre de cinéma</td>
+                    <td>5</td>
                 </tr>
+
+                <tr>
+                    <td>Une brève histoire du temps</td>
+                    <td>Stephen Hawkings</td>
+                    <td>essais sur le temps</td>
+                    <td>8</td>
+                </tr>
+
+
+                <tr>
+                    <td>Shinning</td>
+                    <td>Stephen King</td>
+                    <td>fantastique</td>
+                    <td>7</td>
+                </tr>
+
+
+                <tr>
+                    <td>Fondation</td>
+                    <td>Isaac Asimov</td>
+                    <td>SF</td>
+                    <td>9</td>
+                </tr>
+
+                <tr>
+                    <td>Aux source d'Internet</td>
+                    <td>Alexandre Serres</td>
+                    <td>essais</td>
+                    <td>8</td>
+                </tr>
+
 
             </table>
         </section>
